welcome.lessons.welcome.array.has271.Has271.scala.error
has271:3: error: illegal start of simple expression
		{ if (( (nums(i+1)-nums(i))==5) & (nums(i)-nums(i+2))=1))
                                                                        ^